<resources>
  <string name="title_activity_login">Sign in</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
  <string name="title_activity_login2">Sign in</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_messages">Messages</string>
  <string name="title_contacts">Contacts</string>
  <string name="title_groups">Channels</string>
  <string name="title_threads">Threads</string>
  <string name="title_settings">Settings</string>
  <string name="title_more">More</string>
  <string name="notification_settings">Notification Settings</string>
  <string name="starred_messages">Starred Messages</string>
  <string name="block_user">Block Maggie Phillips</string>
  <string name="updates">Updates</string>
  <string name="fav_messages">Favorite messages</string>
  <string name="sdk_version">SDK version</string>
  <string name="log_out">Log out</string>
  <string name="email">Email</string>
  <string name="send_message">Send Message</string>
  <string name="mute_notif">Mute Notifications</string>
  <string name="attachment_type_audio">Audio</string>
  <string name="attachment_type_contact">Contact</string>
  <string name="attachment_type_camera">Camera</string>
  <string name="attachment_type_location">Location</string>
  <string name="attachment_type_gif">GIF</string>
  <string name="attachment_type_gallery">Gallery</string>
  <string name="attachment_type_file">File</string>
  <string name="attachment_cant_open_media_selection">Can\'t find an app to select media.</string>
  <string name="attachment_photos_videos_or_audio_denied">App requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
  <string name="attachment_contact_denied">App requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
  <string name="attachment_location_denied">App requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
  <string name="attachment_take_photos_denied">App requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
  <string name="attachment_take_videos_denied">App requires the Camera permission in order to take videos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
  <string name="attachment_record_audio_denied">App requires the Record Audio permission in order to record audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Record Audio\".</string>
  <string name="attachment_document_denied">App requires the Storage permission in order to attach document but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
  <string name="blocked_user_toast">You have blocked this user</string>
  <string name="blocked_group_toast">You are not part of this channel</string>
  <string name="hint_message">Message...</string>
  <string name="menu_attachment">Attachment</string>
  <string name="menu_view_profile">View profile</string>
  <string name="menu_block_user">User Blocking</string>
  <string name="manage_notification">Manage notifications</string>
  <string name="no_chat_history">You have no messages</string>
  <string name="menu_title_block_user">Block</string>
  <string name="menu_title_unblock_user">Unblock</string>
  <string name="block_user_action">block</string>
  <string name="unblock_user_action">unblock</string>
  <string name="block_user_message">User is blocked successfully</string>
  <string name="unblock_user_message">User is unblocked successfully</string>
  <string name="attachment_image_title">Image</string>
  <string name="attachment_video_title">Video</string>
  <string name="attachment_location_title">Location</string>
  <string name="attachment_contacts_title">Contacts</string>
  <string name="attachment_audio_title">Audio</string>
  <string name="attachment_document_title">Document</string>
  <string name="toolbar_message_title">Message</string>
  <string name="toolbar_contacts_title">Contacts</string>
  <string name="attachment_permissions_denied">App requires all the permissions, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"All\".</string>
  <string name="my_profile">My profile</string>
  <string name="change_password">Change Password</string>
  <string name="menu_edit">Edit</string>
  <string name="logout_title">Logout!!</string>
  <string name="logout_message">Are you sure you want to logout?</string>
  <string name="logout_yes">YES</string>
  <string name="logout_no">NO</string>
  <string name="logout">LOG OUT</string>
  <string name="cancel">CANCEL</string>
  <string name="clear">CLEAR</string>
  <string name="login_success">Login successful!!</string>
  <string name="change_password_success">Password changed successfully</string>
  <string name="cp_old_password_empty">Old Password is never empty</string>
  <string name="cp_new_password_empty">You can\'t set New Password as empty</string>
  <string name="cp_old_and_new_password_are_same">You can\'t set Old Password as New Password</string>
  <string name="cp_confirm_new_password_empty">You can\'t set Confirmation New Password as empty</string>
  <string name="cp_new_and_confirm_password_are_not_same">New Password and Confirm Password does not match</string>
  <string name="new_password_length">New Password must be at least 8 characters long</string>
  <string name="invalid_file_format">Invalid File Format</string>
  <string name="audio_cancel">CANCEL</string>
  <string name="message_notifier_d_new_messages_in_d_conversations">%1$d new messages in %2$d conversations</string>
  <string name="message_notifier_most_recent_from_s">Most recent from: %1$s</string>
  <string name="message_notifier_locked_message">Locked message</string>
  <string name="message_notifier_media_message_with_text">Media message: %s</string>
  <string name="message_notifier_message_delivery_failed">Message delivery failed.</string>
  <string name="message_notifier_failed_to_deliver_message">Failed to deliver message.</string>
  <string name="message_notifier_error_delivering_message">Error delivering message.</string>
  <string name="message_notifier_mark_all_as_read">Mark all as read</string>
  <string name="message_notifier_mark_read">Mark read</string>
  <string name="message_notifier_media_message">Media message</string>
  <string name="message_notifier_reply">Reply</string>
  <string name="message_notifier_pending_signal_messages">Pending Signal messages</string>
  <string name="message_notifier_you_have_pending_signal_messages">You have pending Signal messages, tap to open and retrieve</string>
  <string name="message_notifier_contact_message">%1$s %2$s</string>
  <string name="message_notifier_unknown_contact_message">Contact</string>
  <string name="capture_failure_message">Something went wrong, please try again</string>
  <string name="empty_namespace_validation_message">Please enter namespace</string>
  <string name="empty_username_validation_message">Please enter username</string>
  <string name="empty_access_code_validation_message">Please enter access code</string>
  <string name="select_users">Please select users</string>
  <string name="group_name">Channel name</string>
  <string name="group_desc">Channel Description</string>
  <string name="participants">Channel Members</string>
  <string name="no_participants">select participants.</string>
  <string name="group_create_success">Channel created successfully</string>
  <string name="group_create_fail">Channel create failure</string>
  <string name="group_update_success">Channel updated successfully</string>
  <string name="group_update_fail">Channel update failure</string>
  <string name="remove_user">Remove user!!</string>
  <string name="desc">Description</string>
  <string name="exit_group">Exit Channel</string>
  <string name="share_current_location">Send current location</string>
  <string name="menu_search">Search</string>
  <string name="all_nearby_places">Nearby locations</string>
  <string name="invalid_location">Invalid Location</string>
  <string name="no_contact_available">No contacts found</string>
  <string name="invalid_contact">There is no phone number and email available</string>
  <string name="status">Status</string>
  <string name="invalid_image">Invalid Image</string>
  <string name="picture_validation_message">Please select image for profile</string>
  <string name="user_failure_message">Something went wrong, Can\'t fetch User Details</string>
  <string name="alert_short_audio">Audio is too short.!!</string>
  <string name="doc_name">DocumentName</string>
  <string name="attachment_gif_title">GIF</string>
  <string name="search_gif">Search GIF</string>
  <string name="alert_gif_file_select">Please select GIF file.!!</string>
  <string name="failure_message">Something went wrong.!!!</string>
  <string name="media_not_found">Image not found..!!</string>
  <string name="title_starred_messages">Starred messages</string>
  <string name="title_clear_chat">Clear chat history</string>
  <string name="title_leave_channel">Leave channel</string>
  <string name="create_group">Create channel</string>
  <string name="copy">Copy</string>
  <string name="start_thread">Reply to thread</string>
  <string name="add_fav">Add to Favorites</string>
  <string name="follow_thread">Follow thread</string>
  <string name="report_message">Report Message</string>
  <string name="every_new_message">Allow all</string>
  <string name="just_mentions">Mentions only</string>
  <string name="nothing">None</string>
  <string name="reaction">Add reaction</string>
  <string name="deleteMessageTitle">Delete Message ?</string>
  <string name="deleteMessage">Delete</string>
  <string name="forward">Forward</string>
  <string name="deleteForEveryOne">Delete for everyone</string>
  <string name="deleteForUser">Delete just for me</string>
  <string name="delete">DELETE</string>
  <string name="editMessage">Edit</string>
  <string name="backup_message_found">Backup messages found</string>
  <string name="backup_message_description">Restore your message history from backup. By choosing not to restore you will not be able to access these messages later.</string>
  <string name="restore">RESTORE</string>
  <string name="skip_restore">SKIP RESTORE</string>
  <string name="btn_next">NEXT</string>
  <string name="dialog_title">Dialog Title</string>
  <string name="dialog_info">This is informative message for alert dialog!!!</string>
  <string name="channels">My channels</string>
  <string name="browse_channel">Browse channels</string>
  <string name="add_members">Add members</string>
  <string name="menu_share">Share</string>
  <string name="menu_info">Info</string>
</resources>