<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_attachment"
      android:icon="@drawable/ic_attachment_menu"
      android:title="@string/menu_attachment"
      app:contentDescription="@string/menu_attachment"
      app:showAsAction="always"/>

  <item
      android:id="@+id/action_more"
      android:icon="@drawable/ic_action_more"
      android:title=""
      app:showAsAction="always">

    <menu>
      <item
          android:id="@+id/action_view_profile"
          android:title="@string/menu_view_profile"
          android:icon="@drawable/ic_view_profile_menu"
          app:contentDescription="@string/menu_view_profile"/>

      <item
          android:id="@+id/action_block_user"
          android:title="@string/menu_block_user"
          android:icon="@drawable/ic_block_menu"
          app:contentDescription="@string/menu_block_user"/>

      <item
          android:id="@+id/action_mute_notification"
          android:title="@string/manage_notification"
          android:visible="true"
          android:icon="@drawable/ic_mute_notification_menu"
          app:contentDescription="@string/manage_notification"/>

      <item
          android:id="@+id/action_starred_messages"
          android:title="@string/title_starred_messages"
          android:icon="@drawable/ic_stat_message_menu"
          app:contentDescription="@string/title_starred_messages"/>

      <item
          android:id="@+id/action_clear_chat"
          android:title="@string/title_clear_chat"
          android:icon="@drawable/ic_clear_chat_history"
          app:contentDescription="@string/title_clear_chat"/>

      <item
          android:id="@+id/action_leave_channel"
          android:title="@string/title_leave_channel"
          android:icon="@drawable/ic_leave_channel"
          android:visible="false"
          app:contentDescription="@string/title_leave_channel"/>
    </menu>
  </item>
</menu>