<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_more"
      android:icon="@drawable/ic_action_more"
      android:title=""
      app:showAsAction="always">

    <menu>
      <item
          android:id="@+id/action_forward"
          android:icon="@drawable/ic_forward_menu"
          android:title="@string/forward"
          app:contentDescription="@string/forward" />

      <item
          android:id="@+id/action_share"
          android:icon="@drawable/ic_share_menu"
          android:title="@string/menu_share"
          app:contentDescription="@string/menu_share" />

      <item
          android:id="@+id/action_info"
          android:icon="@drawable/ic_info_menu"
          android:title="@string/menu_info"
          app:contentDescription="@string/menu_info" />
    </menu>
  </item>
</menu>