<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edittext_white_background"
    android:paddingTop="@dimen/dp24"
    android:paddingStart="@dimen/dp24"
    android:paddingEnd="@dimen/dp24"
    android:paddingBottom="@dimen/dp5"
    >

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvAlertTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/sf_pro_display_semi_bold"
      android:text="@string/dialog_title"
      android:textColor="@color/card_view_title"
      android:textSize="@dimen/sp18"
      />

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvAlertInfo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvAlertTitle"
      android:layout_marginTop="@dimen/dp10"
      android:fontFamily="@font/sf_pro_display_regular"
      android:text="@string/dialog_info"
      android:textColor="@color/card_view_title"
      android:textSize="@dimen/sp14"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnSubmit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvAlertInfo"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="@dimen/dp15"
      android:background="@null"
      android:fontFamily="@font/sf_pro_display_bold"
      android:text="@string/btn_next"
      android:textColor="@color/tv_button_color"
      android:textSize="@dimen/sp14"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnCancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvAlertInfo"
      android:layout_marginTop="@dimen/dp15"
      android:layout_marginRight="@dimen/dp24"
      android:layout_toLeftOf="@+id/btnSubmit"
      android:background="@null"
      android:fontFamily="@font/sf_pro_display_bold"
      android:text="@string/cancel"
      android:textColor="@color/fab_disable_bg"
      android:textSize="@dimen/sp14"
      />
</RelativeLayout>