<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edittext_white_background"
    android:paddingBottom="@dimen/dp5"
    android:paddingEnd="@dimen/dp24"
    android:paddingStart="@dimen/dp24"
    android:paddingTop="@dimen/dp24"
    >

  <FrameLayout
      android:id="@+id/flDelete"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <LinearLayout
        android:id="@+id/llDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
      <androidx.appcompat.widget.AppCompatRadioButton
          android:id="@+id/rbEveryone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:button="@null"
          android:checked="false"
          android:drawablePadding="@dimen/dp15"
          android:textSize="@dimen/reaction_text_size"
          android:background="@color/white"
          android:fontFamily="@font/sf_pro_display_regular"
          android:drawableRight="@drawable/unchecked"
          android:padding="@dimen/dp5"
          android:text="@string/deleteForEveryOne"
          android:textAlignment="textStart"
          />
      <androidx.appcompat.widget.AppCompatRadioButton
          android:id="@+id/rbUser"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:button="@null"
          android:checked="true"
          android:background="@color/white"
          android:layout_marginTop="@dimen/dp30"
          android:textSize="@dimen/reaction_text_size"
          android:fontFamily="@font/sf_pro_display_regular"
          android:drawablePadding="@dimen/dp15"
          android:drawableRight="@drawable/selected"
          android:padding="@dimen/dp5"
          android:text="@string/deleteForUser"
          android:textAlignment="textStart"
          />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/deleteMessageTitle"
        android:textColor="@color/white_edit_text"
        android:textSize="@dimen/sp16"
        android:visibility="gone"
        />
  </FrameLayout>


  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnDelete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_below="@+id/flDelete"
      android:layout_marginTop="@dimen/dp30"
      android:background="@null"
      android:fontFamily="@font/sf_pro_display_bold"
      android:text="@string/delete"
      android:textColor="@color/red_600"
      android:textSize="@dimen/sp12"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnCancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/flDelete"
      android:layout_marginRight="@dimen/dp24"
      android:layout_marginTop="@dimen/dp30"
      android:layout_toLeftOf="@+id/btnDelete"
      android:background="@null"
      android:fontFamily="@font/sf_pro_display_bold"
      android:text="@string/cancel"
      android:textColor="@color/colorPrimary"
      android:textSize="@dimen/sp12"
      />
</RelativeLayout>