<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:animateLayoutChanges="true"
      android:background="@drawable/edittext_white_background"
      app:cardCornerRadius="12dp"
      app:cardUseCompatPadding="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <RadioGroup
        android:id="@+id/rgMuteSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mute_setting_box_margin"
        android:layout_marginBottom="@dimen/mute_setting_box_margin"
        >

      <RadioButton
          android:id="@+id/rbAll"
          style="@style/mute_radio_button_style"
          android:text="@string/every_new_message"
          />

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@drawable/divider"
          />

      <RadioButton
          android:id="@+id/rbMention"
          style="@style/mute_radio_button_style"
          android:text="@string/just_mentions"
          />

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@drawable/divider"
          />

      <RadioButton
          android:id="@+id/rbNone"
          style="@style/mute_radio_button_style"
          android:text="@string/nothing"
          />
    </RadioGroup>
  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>